--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel="stylesheet" href="Style_sheet.css">
     </head>
     <body>
-        <h1>Wassup</h1>
+        <nav id="MainNav">
+            <button class="sidenav-toggle" id="menu-toggle">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+              </button>
+            <div id="Navigator">  
+               <ul>
+                   <li><a>HOME</a></li>
+                   <li><a>SHOP</a></li>
+                   <li><a>ABOUT</a></li>
+                </ul>  </div>
+        </nav>
     </body>
+    <script  type="text/javascript" src="Script.js" ></script>
 </html> 
