--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="Style_sheet.css">
+    <link rel="stylesheet" href="/CSS/Style_sheet.css">
 </head>
 
 
 
 <body class="loginBody">
    <div class="HomeButton">
-       <a href="Index.html"><img src="Icons/Home.png" alt="Go Home"></a>
+       <a href="Index.html"><img src="/Icons/Home.png" alt="Go Home"></a>
    </div>
 
 
@@ -42,7 +42,9 @@
 </div>
 </div>
 
-<script  type="text/javascript" src="Script.js" ></script>
-<script  type="text/javascript" src="Script2.js" ></script>
+<script  type="text/javascript" src="/JS/Script.js" ></script>
+    <script  type="text/javascript" src="/JS/Script2.js" ></script>
+    <script  type="text/javascript" src="/JS/Script3.js" ></script>
+    <script type="text/javascript"  src="JS/Script4.js"></script>
 
 </body>
