--- a/HTML/Register.html
+++ b/HTML/Register.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="Style_sheet.css">
+    <link rel="stylesheet" href="/CSS/Style_sheet.css">
 </head>
-
-
 
 <body class="loginBody">
     <div class="HomeButton">
-        <a href="Index.html"><img src="Icons/Home.png" alt="Go Home"></a>
+        <a href="Index.html"><img src="/Icons/Home.png" alt="Go Home"></a>
     </div>
-
 
 <div class="background">
     <h1 >HELLO THERE !! <br>
         DO YOU WANT TO JOIN US ?!</h1>
     <div class="login-and-register">
     
-
-
 <div>  
     <h2>REGISTER</h2>
     <form>
@@ -44,7 +39,8 @@
 </div>
 </div>
 
-<script  type="text/javascript" src="Script.js" ></script>
-<script  type="text/javascript" src="Script2.js" ></script>
-
+<script  type="text/javascript" src="/JS/Script.js" ></script>
+    <script  type="text/javascript" src="/JS/Script2.js" ></script>
+    <script  type="text/javascript" src="/JS/Script3.js" ></script>
+    <script type="text/javascript"  src="JS/Script4.js"></script>
 </body>
